--- a/styles/abstracts/variables.scss
+++ b/styles/abstracts/variables.scss
@@ -13,6 +13,7 @@
 	--danger-hover: #c44c4c;
 	--danger-pressed: #490c0c;
 	--danger-focus: #c88c8c;
+	--danger-bg: #ab4646;
 
 	--warning-main: #eabb42;
 	--warning-secondary: #fbf1d9;
@@ -27,6 +28,7 @@
 	--success-hover: #4aaa48;
 	--success-pressed: #6da66c;
 	--success-focus: #9adc98;
+	--success-bg: #2d6e2d;
 
 	--info-colors: #194689;
 	--info-secondary: #d1dae7;
